<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".minijuegos">

    <TextView
        android:id="@+id/textView"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/button_minijuegos"
        android:textSize="100px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <Button
        android:id="@+id/buttonAcciones"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button1"
        android:onClick="acciones"
        android:text="@string/button_acciones"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/buttonPartes"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button1"
        android:onClick="cuerpo"
        android:text="@string/button_partes"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/buttonNumeros"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button1"
        android:onClick="numeros"
        android:text="@string/button_numeros"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

    <Button
        android:id="@+id/buttonColores"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button1"
        android:onClick="colores"
        android:text="@string/button_colores"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299" />

    <Button
        android:id="@+id/buttonComida"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button1"
        android:onClick="comida"
        android:text="@string/button_comida"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/buttonPaises"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button1"
        android:onClick="paises"
        android:text="@string/button_paises"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299" />

    <Button
        android:id="@+id/buttonSaludos"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button1"
        android:onClick="saludos"
        android:text="@string/button_saludos"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

    <Button
        android:id="@+id/buttonAnimales"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button1"
        android:onClick="animales"
        android:text="@string/button_animales"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/buttonRopa"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button1"
        android:onClick="ropa"
        android:text="@string/button_ropa"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/buttonABC"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button1"
        android:onClick="abc"
        android:text="@string/button_abc"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/buttonSugerencias"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button1"
        android:onClick="sugerencias"
        android:text="@string/button_sugerencias"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />


</androidx.constraintlayout.widget.ConstraintLayout>